<resources>
    <string name="now_tree">当前养成：</string>
    <string name="app_name">花奴</string>
    <string name="new_note">新笔记</string>
    <string name="crime_title_label">标题</string>
    <string name="note_title_hint">输入养花笔记</string>
    <string name="note_details_label">明细</string>
    <string name="know_more">了解更多</string>
    <string name="sunflower">可邀好友嗑瓜子</string>
    <string name="date_picker_title">Date of Note:</string>
    <string name="lan">兰科是仅次于菊科的一个大科，是单子叶植物中的第一大科。有悠久的栽培历史和众多的品种。
        自然界中尚有许多有观赏价值的野生兰花有待开发、保护和利用。 主要有中国兰和洋兰两大类</string>
    <string name="caoben">草本（Herb），是一类植物的总称，但并非植物学科分类中的一个单元。人们通常将草本植物称作“草”，
        而将木本植物称为“树”，但是也偶尔有例外，比如竹，就属于草本植物，但人们经常将其看做是一种树。</string>
    <string name="muben">木本植物（woody plant）是指根和茎因增粗生长形成大量的木质部，而细胞壁也多数木质化的坚固的植物。
        植物体木质部发达，茎坚硬，多年生。与草本植物相对，人们常将前者称为树，后者称为草。</string>
    <string name="qiugen">球根花卉是指具有由地下茎或根变态形成的膨大部分的多年生草本花卉。球根花卉偶尔也包含少数地上茎
        或叶发生变态膨大者。球根花卉广泛分布于世界各地。我国各地也很普遍。供栽培观赏的有数百种，大多属单子叶植物。
        植株地下部分变态膨大，有的在地下形成球状物或块状物，大量贮藏养分的多年生草本花卉。</string>
    <string name="shuisheng">水生植物指的是能在水中生长的植物。水生植物是出色的游泳运动员或潜水者。叶子柔软而透明，
        有的形成为丝状，如金鱼藻。丝状叶可以大大增加与水的接触面积，使叶子能最大限度地得到水里很少能得到的光照，吸收
        水里溶解得很少的二氧化碳，保证光合作用的进行。</string>
    <string name="tengben">藤本植物(Vine或liana)，是指那些茎干细长，自身不能直立生长，必须依附他物而向上攀缘的植物。按
        它们茎的质地分为草质藤本（如扁豆、牵牛花、芸豆等）和木质藤本。按照它们的攀附方式，则有缠绕藤本（如紫藤、金银花、何
        首乌）、吸附藤本（如凌霄、爬山虎、五叶地锦）和卷须藤本（如丝瓜、葫芦、葡萄）、蔓生藤本（如蔷薇、木香、藤本月季）</string>
    <string name="sugen">宿根花卉指个体寿命超过两年，可持续生长，多次开花、结果，且地下根系或地下茎形态正常，不发生变态的一类多年生草本花卉。</string>
    <string name="problem">花卉常见病</string>
    <string name="problem_1">小叶栀子叶片发黄怎么办？花友们经常遇到小叶栀子叶片发黄的情况，造成叶片发黄的原因是多种多样的，找出真正的原因才能对症下药奥~~</string>
    <string name="problem_2">茶梅烂根是怎么回事?茶梅的根部是肉质根，在管理不当的情况下，容易烂根。那么，导致茶梅烂根的原因是什么呢？</string>
    <string name="problem_3">鸟巢蕨的病虫害及其防治 鸟巢蕨,又称为山苏花,属铁角蕨科巢蕨的一种,有活血祛瘀、强壮筋骨的作用,也可以用于跌打损伤、活血祛瘀、骨折、头痛等.今天就带大家看一下鸟巢蕨的常见虫害有哪些!</string>
    <string name="problem_4">夜来香的病虫害及其防治 病虫害的发生不利于夜来香的正常生长，需及时采取针对措施。那么，夜来香有哪些常见的病虫害呢？又该如何进行相应的防治呢？</string>
    <string name="problem_5">贴梗海棠掉叶子怎么办? 贴梗海棠又被称为皱皮木瓜，它的功效我相信各位花友都熟知了，那么，不知道各位花友家中的贴梗海棠有没有出现掉叶子的情况呢，今天小编就给大家介绍一下贴梗海棠掉叶子的处理办法。</string>
    <string name="problem_6">凤仙花不开花怎么办? 凤仙花花朵美丽，它的主要作用就是观花，但是在养殖的时候却是会出现不开花的现象的。那么，凤仙花不开花要怎么办？</string>
    <string name="problem_7">鸟巢蕨叶子焦边怎么办? 鸟巢蕨是附生型的蕨类植物，在生长过程中如果栽培管理不当，容易会出现叶子边缘发黄枯焦（焦边）的现象。那么，鸟巢蕨叶子出现焦边的原因有哪些呢，怎么处理及防止鸟巢蕨叶子焦边呢？</string>
    <string name="problem_8">草莓休眠了怎么办? 在养殖草莓的时候，大家会发现，草莓是会休眠的。草莓的休眠是怎么回事？休眠了要怎么办呢？</string>
    <string name="problem_9">桑树为什么不发芽? 桑树的正常发芽时间一般在初春3月的时候，但是有时候也会出现桑树到了早春也不发芽的情况，这是由于什么导致的呢？</string>
    <string name="problem_10">多肉烂根、徒长、黑腐…这样做，分分钟救活!!!!!!!经过了一个冬天，估计很多花友的多肉都徒成狗了吧？还有一些花友的多肉化水了……真是肉生艰难啊！别担心！花花今天就带来了解决方法！</string>
</resources>
