<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">
            <android.support.v7.widget.CardView
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/caoben"/>
                    <TextView
                        android:padding="5dp"
                        android:textColor="@color/text_gray_6"
                        android:layout_width="wrap_content"
                        android:textSize="13sp"
                        android:text="@string/caoben"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/know_more_caoben"
                        android:text="@string/know_more"
                        android:textColor="@color/text_gray_28"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#00ffffff"/>
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/lan"/>
                    <TextView
                        android:padding="5dp"
                        android:textColor="@color/text_gray_6"
                        android:layout_width="wrap_content"
                        android:textSize="13sp"
                        android:text="@string/lan"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/know_more_lan"
                        android:text="@string/know_more"
                        android:textColor="@color/text_gray_28"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#00ffffff"/>
                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/muben"/>
                    <TextView
                        android:padding="5dp"
                        android:textColor="@color/text_gray_6"
                        android:layout_width="wrap_content"
                        android:textSize="13sp"
                        android:text="@string/muben"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/know_more_muben"
                        android:text="@string/know_more"
                        android:textColor="@color/text_gray_28"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#00ffffff"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/qiugen"/>
                    <TextView
                        android:padding="5dp"
                        android:textColor="@color/text_gray_6"
                        android:layout_width="wrap_content"
                        android:textSize="13sp"
                        android:text="@string/qiugen"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/know_more_qiugen"
                        android:text="@string/know_more"
                        android:textColor="@color/text_gray_28"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#00ffffff"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/shuisheng"/>
                    <TextView
                        android:padding="5dp"
                        android:textColor="@color/text_gray_6"
                        android:layout_width="wrap_content"
                        android:textSize="13sp"
                        android:text="@string/shuisheng"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/know_more_shuisheng"
                        android:text="@string/know_more"
                        android:textColor="@color/text_gray_28"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#00ffffff"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/tengben"/>
                    <TextView
                        android:padding="5dp"
                        android:textColor="@color/text_gray_6"
                        android:layout_width="wrap_content"
                        android:textSize="13sp"
                        android:text="@string/tengben"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/know_more_tengben"
                        android:text="@string/know_more"
                        android:textColor="@color/text_gray_28"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#00ffffff"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sugen"/>
                    <TextView
                        android:padding="5dp"
                        android:textColor="@color/text_gray_6"
                        android:layout_width="wrap_content"
                        android:textSize="13sp"
                        android:text="@string/sugen"
                        android:layout_height="wrap_content"/>
                    <Button
                        android:id="@+id/know_more_sugen"
                        android:text="@string/know_more"
                        android:textColor="@color/text_gray_28"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#00ffffff"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
